[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypkk"
description = "PKK parser"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Aleksandr Litovchenko", email = "yazmolod@gmail.com" },
]
dependencies = [
    "hishel",
    "pydantic",
    "pydantic-geojson",
    "opencv-python",
    "shapely",
    "pyproj",
    "numpy",
]
dynamic = ["readme", "version"]

[tool.hatch.version]
path = "pypkk/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/tests",
]