[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypkk"
description = "PKK parser"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Aleksandr Litovchenko", email = "yazmolod@gmail.com" },
]
dependencies = [
    "hishel[sqlite]",
    "pydantic",
    "pydantic-geojson",
    "shapely",
    "pyproj",
    "numpy",
    "opencv-contrib-python-headless>=4.10.0.84",
]
dynamic = ["readme", "version"]

[tool.hatch.version]
path = "pypkk/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/tests",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "pre-commit>=4.0.1",
]
ipy = [
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
